Mobile navbar edited

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1067,3 +1067,12 @@ a:focus {
     float: right;
 }
 /*Modal cards*/
+
+@media (max-width: 992px) {
+  .bg-box img {
+    width: 100%;
+  }
+  .custom_nav-container .navbar-nav .nav-item .nav-link{
+    color: white;
+  }
+}
